syntax="proto3";

message KeyRequest {
    string tid = 1;
    string key = 2;
    repeated string readSet = 3;
    string beginTS = 4;
    string lowerBound = 5;
    string txnMngrIP = 6;
}

message KeyResponse {
    string tid = 1;
    string keyVersion = 2;
    bytes value = 3;
    repeated string coWrittenSet = 4;
}

message ValidateRequest {
    string tid = 1;
    string beginTS = 2;
    string commitTS = 3;
    repeated string keys = 4;
}

message FinishRequest {
    string tid = 1;
    TransactionAction s = 2;
    repeated string writeSet = 3;
    repeated bytes writeBuffer = 4;
}

enum TransactionAction {
    COMMIT = 0;
    ABORT = 1;
}
